--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <div id="root"></div>
     <!--
       This HTML file is a template.
+      This is another developer.
       If you open it directly in the browser, you will see an empty page.
 
       You can add webfonts, meta tags, or analytics to this file.
